src/gen/UqlParser.java
// Generated from D:/szko³a/4rok/Kompilator/UqlProject/ANTLR\Uql.g4 by ANTLR 4.5.1

    package gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, LOGIC=5, STRINGKEYWORD=6, NUMERICKEYWORD=7, 
		NUMERICOPERATOR=8, STRINGOPERATOR=9, RETURN=10, SORT=11, SORTDIRECTION=12, 
		ARRAYOPERATOR=13, ALLSELECTOR=14, ENDTOKEN=15, EQUALS=16, LEFTBRACKET=17, 
		RIGHTBRACKET=18, NUMBER=19, STRING=20, NEWLINE=21, WS=22, UNKNOWN=23;
	public static final int
		RULE_queries = 0, RULE_returnquery = 1, RULE_query = 2, RULE_logic = 3, 
		RULE_expression = 4, RULE_tablearray = 5, RULE_numericarray = 6, RULE_stringarray = 7, 
		RULE_sortexpression = 8;
	public static final String[] ruleNames = {
		"queries", "returnquery", "query", "logic", "expression", "tablearray", 
		"numericarray", "stringarray", "sortexpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'['", "']'", "'by'", null, null, null, null, null, null, 
		null, null, null, "'*'", "';'", "'='", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "LOGIC", "STRINGKEYWORD", "NUMERICKEYWORD", 
		"NUMERICOPERATOR", "STRINGOPERATOR", "RETURN", "SORT", "SORTDIRECTION", 
		"ARRAYOPERATOR", "ALLSELECTOR", "ENDTOKEN", "EQUALS", "LEFTBRACKET", "RIGHTBRACKET", 
		"NUMBER", "STRING", "NEWLINE", "WS", "UNKNOWN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Uql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    int count = 0;

	    public int getCount(){
	        return count;
	    }

	public UqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueriesContext extends ParserRuleContext {
		public List<ReturnqueryContext> returnquery() {
			return getRuleContexts(ReturnqueryContext.class);
		}
		public ReturnqueryContext returnquery(int i) {
			return getRuleContext(ReturnqueryContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(UqlParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(UqlParser.NEWLINE, i);
		}
		public QueriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queries; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterQueries(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitQueries(this);
		}
	}

	public final QueriesContext queries() throws RecognitionException {
		QueriesContext _localctx = new QueriesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_queries);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			returnquery();
			count++;
			setState(24);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(20);
				match(NEWLINE);
				setState(21);
				returnquery();
				}
				}
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnqueryContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(UqlParser.RETURN, 0); }
		public TablearrayContext tablearray() {
			return getRuleContext(TablearrayContext.class,0);
		}
		public SortexpressionContext sortexpression() {
			return getRuleContext(SortexpressionContext.class,0);
		}
		public TerminalNode ENDTOKEN() { return getToken(UqlParser.ENDTOKEN, 0); }
		public ReturnqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnquery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterReturnquery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitReturnquery(this);
		}
	}

	public final ReturnqueryContext returnquery() throws RecognitionException {
		ReturnqueryContext _localctx = new ReturnqueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_returnquery);
		try {
			setState(38);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(27);
				query(0);
				setState(28);
				match(RETURN);
				setState(29);
				tablearray();
				setState(30);
				sortexpression();
				setState(31);
				match(ENDTOKEN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				query(0);
				setState(34);
				match(RETURN);
				setState(35);
				tablearray();
				setState(36);
				match(ENDTOKEN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode LEFTBRACKET() { return getToken(UqlParser.LEFTBRACKET, 0); }
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public TerminalNode RIGHTBRACKET() { return getToken(UqlParser.RIGHTBRACKET, 0); }
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		return query(0);
	}

	private QueryContext query(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		QueryContext _localctx = new QueryContext(_ctx, _parentState);
		QueryContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_query, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			switch (_input.LA(1)) {
			case STRINGKEYWORD:
			case NUMERICKEYWORD:
				{
				setState(41);
				expression();
				}
				break;
			case LEFTBRACKET:
				{
				setState(42);
				match(LEFTBRACKET);
				setState(43);
				query(0);
				setState(44);
				match(RIGHTBRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new QueryContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_query);
					setState(48);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(49);
					logic();
					setState(50);
					query(3);
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LogicContext extends ParserRuleContext {
		public TerminalNode LOGIC() { return getToken(UqlParser.LOGIC, 0); }
		public LogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitLogic(this);
		}
	}

	public final LogicContext logic() throws RecognitionException {
		LogicContext _localctx = new LogicContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(LOGIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode NUMERICKEYWORD() { return getToken(UqlParser.NUMERICKEYWORD, 0); }
		public TerminalNode NUMERICOPERATOR() { return getToken(UqlParser.NUMERICOPERATOR, 0); }
		public TerminalNode NUMBER() { return getToken(UqlParser.NUMBER, 0); }
		public TerminalNode STRINGKEYWORD() { return getToken(UqlParser.STRINGKEYWORD, 0); }
		public TerminalNode STRINGOPERATOR() { return getToken(UqlParser.STRINGOPERATOR, 0); }
		public TerminalNode STRING() { return getToken(UqlParser.STRING, 0); }
		public TerminalNode EQUALS() { return getToken(UqlParser.EQUALS, 0); }
		public TerminalNode ARRAYOPERATOR() { return getToken(UqlParser.ARRAYOPERATOR, 0); }
		public StringarrayContext stringarray() {
			return getRuleContext(StringarrayContext.class,0);
		}
		public NumericarrayContext numericarray() {
			return getRuleContext(NumericarrayContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expression);
		try {
			setState(77);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(NUMERICKEYWORD);
				setState(60);
				match(NUMERICOPERATOR);
				setState(61);
				match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(STRINGKEYWORD);
				setState(63);
				match(STRINGOPERATOR);
				setState(64);
				match(STRING);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				match(NUMERICKEYWORD);
				setState(66);
				match(EQUALS);
				setState(67);
				match(NUMBER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				match(STRINGKEYWORD);
				setState(69);
				match(EQUALS);
				setState(70);
				match(STRING);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				match(STRINGKEYWORD);
				setState(72);
				match(ARRAYOPERATOR);
				setState(73);
				stringarray();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(74);
				match(NUMERICKEYWORD);
				setState(75);
				match(ARRAYOPERATOR);
				setState(76);
				numericarray();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TablearrayContext extends ParserRuleContext {
		public List<TerminalNode> STRINGKEYWORD() { return getTokens(UqlParser.STRINGKEYWORD); }
		public TerminalNode STRINGKEYWORD(int i) {
			return getToken(UqlParser.STRINGKEYWORD, i);
		}
		public TerminalNode ALLSELECTOR() { return getToken(UqlParser.ALLSELECTOR, 0); }
		public TablearrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tablearray; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterTablearray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitTablearray(this);
		}
	}

	public final TablearrayContext tablearray() throws RecognitionException {
		TablearrayContext _localctx = new TablearrayContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tablearray);
		int _la;
		try {
			setState(88);
			switch (_input.LA(1)) {
			case STRINGKEYWORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(STRINGKEYWORD);
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(80);
					match(T__0);
					setState(81);
					match(STRINGKEYWORD);
					}
					}
					setState(86);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case ALLSELECTOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(ALLSELECTOR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericarrayContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(UqlParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(UqlParser.NUMBER, i);
		}
		public NumericarrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numericarray; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterNumericarray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitNumericarray(this);
		}
	}

	public final NumericarrayContext numericarray() throws RecognitionException {
		NumericarrayContext _localctx = new NumericarrayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numericarray);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__1);
			setState(91);
			match(NUMBER);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(92);
				match(T__0);
				setState(93);
				match(NUMBER);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringarrayContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(UqlParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(UqlParser.STRING, i);
		}
		public StringarrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringarray; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterStringarray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitStringarray(this);
		}
	}

	public final StringarrayContext stringarray() throws RecognitionException {
		StringarrayContext _localctx = new StringarrayContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stringarray);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__1);
			setState(102);
			match(STRING);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(103);
				match(T__0);
				setState(104);
				match(STRING);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortexpressionContext extends ParserRuleContext {
		public TerminalNode SORT() { return getToken(UqlParser.SORT, 0); }
		public TerminalNode SORTDIRECTION() { return getToken(UqlParser.SORTDIRECTION, 0); }
		public TerminalNode STRINGKEYWORD() { return getToken(UqlParser.STRINGKEYWORD, 0); }
		public TerminalNode NUMERICKEYWORD() { return getToken(UqlParser.NUMERICKEYWORD, 0); }
		public List<TerminalNode> WS() { return getTokens(UqlParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(UqlParser.WS, i);
		}
		public SortexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sortexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).enterSortexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UqlListener ) ((UqlListener)listener).exitSortexpression(this);
		}
	}

	public final SortexpressionContext sortexpression() throws RecognitionException {
		SortexpressionContext _localctx = new SortexpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sortexpression);
		int _la;
		try {
			setState(138);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(SORT);
				setState(113);
				match(SORTDIRECTION);
				setState(114);
				match(T__3);
				setState(115);
				match(STRINGKEYWORD);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				match(SORT);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(117);
					match(WS);
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				match(SORTDIRECTION);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(124);
					match(WS);
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(130);
				match(T__3);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(131);
					match(WS);
					}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(137);
				match(NUMERICKEYWORD);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 2:
			return query_sempred((QueryContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean query_sempred(QueryContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 2);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}